Bug 1279313 part 1.  Simplify AutoEntryScript to not make callers pass in a JSContext.  r=bholley